made back image on mobile stay the same, fixed loader issues

--- a/src/styles/general/_general.scss
+++ b/src/styles/general/_general.scss
@@ -443,7 +443,7 @@ body.ltr{
 			.forms{width: 100%;margin: 0 auto;min-width: unset;padding: 30px 5px;
 				h2{margin-bottom: 10px}
 				
-				.small_form{max-width: 90vw}
+				.small_form{max-width: 90vw; margin: 0 auto;}
 				#choose_number{
 					.options{
 //						.number{border: 2px solid transparent}
