--- a/src/styles/views/_join_us.scss
+++ b/src/styles/views/_join_us.scss
@@ -114,7 +114,10 @@ $mobileWidth: 750px;
 			}
 		}
 		.invoice_wrapper{ padding-right: 40px;text-align: right;display: flex;flex-direction: column;gap: 20px;margin: 50px 0 20px;
-			.option{position: relative;cursor: pointer;
+			.option{
+				&{position: relative;cursor: pointer;}
+				@media (max-width: 600px) {display: flex;justify-content: space-between;align-items: center;max-width: 280px;}
+				@media (min-width: 600px) {}
 				.small_title{margin-bottom: 0}
 			}
 			.radio{height: 22px;width: 22px;border-radius: 100%;border: 2px solid #ccc;position: absolute;right: -30px;top: 3px;}
